--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -72,6 +72,13 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="checkMapButton"
+            android:text="Maps" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
