added basic geofences

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -79,6 +79,13 @@
             android:onClick="checkMapButton"
             android:text="Maps" />
 
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="checkStudentButton"
+            android:text="Student" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
