--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeacherAcitivity">
+    tools:context=".StudentActivity">
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/teacher_nav"
+        android:id="@+id/student_nav"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        app:menu="@menu/nav_items_teacher" />
+        app:menu="@menu/nav_items_students" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="512dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@id/teacher_nav"
-        android:id="@+id/teacher_frame"
+        android:layout_above="@id/student_nav"
+        android:id="@+id/student_frame"
         android:layout_marginBottom="55dp"
         android:layout_marginEnd="0dp">
 
