--- a/app/src/main/res/layout/activity_class_roll.xml
+++ b/app/src/main/res/layout/activity_class_roll.xml
@@ -48,11 +48,13 @@
 
     <ScrollView
         android:id="@+id/rollScrollView"
-        android:layout_width="match_parent"
+        style="@android:style/Widget.ScrollView"
+        android:layout_width="327dp"
         android:layout_height="330dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="125dp">
+        android:layout_marginBottom="125dp"
+        android:layout_marginStart="17dp">
 
         <LinearLayout
             android:layout_width="match_parent"
