--- a/app/src/main/res/layout/activity_nearby.xml
+++ b/app/src/main/res/layout/activity_nearby.xml
@@ -36,6 +36,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="119dp"
+        android:onClick="startSendingMessage"
         app:srcCompat="@drawable/red" />
 
     <TextView
