--- a/app/src/main/res/layout/activity_student_geofence.xml
+++ b/app/src/main/res/layout/activity_student_geofence.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NearbyActivity">
+    tools:context=".MainStudentActivity">
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/student_nav"
-        tools:context=".studentGeofence" />
+        tools:context=".StudentMapsActivity" />
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/student_nav"
         android:layout_width="match_parent"
