--- a/app/src/main/res/layout/activity_maps2.xml
+++ b/app/src/main/res/layout/activity_maps2.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="58dp"
-        tools:context=".MapsActivity2" />
+        tools:context=".TeacherMapsActivity" />
 
     <SeekBar
         android:id="@+id/seekBar"
