--- a/app/src/main/res/layout/content_nearby.xml
+++ b/app/src/main/res/layout/content_nearby.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".NearbyActivity"
+    tools:context=".MainStudentActivity"
     tools:showIn="@layout/activity_nearby">
 
 </android.support.constraint.ConstraintLayout>
