--- a/app/src/main/res/layout/content_nearby.xml
+++ b/app/src/main/res/layout/content_nearby.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainStudentActivity"
-    tools:showIn="@layout/activity_nearby">
+    tools:showIn="@layout/activity_main_student">
 
 </android.support.constraint.ConstraintLayout>
